--- a/public/less/_form.less
+++ b/public/less/_form.less
@@ -102,6 +102,9 @@
       #auto-init {
         margin-left: @create-page-form-input-padding+15px;
       }
+      #save-default-repo {
+        margin-left: @create-page-form-input-padding+15px;
+      }
     }
   }
 }
